        is_analyze  : True if this test is analyze test of a parameterize/analyze
        is_analysis_only : True if the -a / --analyze command line flag is given

      The 'is_analysis_only' variable supersedes (and deprecates) the
      'opt_analyze' variable and the --execute-analysis-sections test command
      line option.

Fixes:

    - 

Changes:

    - The `-o` and `-O` command line options were not allowed when the current
      workin directory is inside a TestResults directory.  Now they are as long
      as they are the same as the values that created the TestResults directory
      in the first place.

    - The old test results analysis and HTML summary capability has been
      removed, including the entry points reports.py and results.py.  However,
      the capability to store test results files and use them to compute
      runtimes has been retained and made easier to use.  See wiki page on
      Saving and Using Test Runtimes.

    - When the -a or --analyze option is given on the vvtest command line, the
      --execute-analysis-sections option is placed on the test script command
      line.  Also, the 'opt_analyze' boolean is set in the vvtest_util.py file
      in this case.  Now these are both deprecated and will be removed next
      release.  The capability is replaced with the 'is_analysis_only' boolean
      variable in the vvtest_util.py file.


==============================================================================

Release 1.5
-----------

Nov 24, 2023

Improvements:

    - The parameter generator feature now allows more than one dependency
      to be specified per test instance.

    - The absolute path of the test execution directory is now added to
      PYTHONPATH for test script invocation (along with an empty path). This
      is more resilient in the case that a preload script removes empty paths
      from the PYTHONPATH.

    - For better Windows support, if the test_preload() plugin function returns