@@ -856,8 +856,9 @@ def to_str( obj ):
 def test_id_tuple( testname, test_params ):
     ""
     L = [testname]
-    for k,v in test_params.items():
-        L.append( (k,to_str(v)) )
+    for k in sorted(test_params.keys()):
+        sval = to_str(test_params[k])
+        L.append( (k,sval) )
     return tuple(L)
 
 
